<resources>

    <string name="app_name">校园信息</string>
    <string name="app_title">轻松获取校园信息</string>

    <string name="menu_refresh">刷新</string>
    <string name="menu_settings">设置</string>
    <string name="change_theme">更改主题</string>
    <string name="light_theme">日间模式</string>
    <string name="dark_theme">夜间模式</string>
    
    <string name="about">关于Ta：%1$s</string>
    <string name="join_time">加入时间：%1$s</string>
    <string name="org">Ta是：%1$s</string>
    <string name="contact">联系方式：%1$s</string>
    <string name="close">关闭</string>
    <string name="no_such_man">对不起，查无此人-_-</string>
    <string name="no_such_notice">对不起，查无此信息-_-</string>
    <string name="default_doc_name">点击下载附件</string>
    <string name="doc">附件下载：</string>
    
    <string name="login">已经认证？现在登陆！</string>
    <string name="go_to_auth">获得授权？请戳这里！</string>
    <string name="auth_uri">http://lab.newgxu.cn/resources/html/info/auth.html</string>
    
    <string name="login_box">登陆 :-)</string>
    <string name="go_to_service">进入我的用户中心</string>
    <string name="account">请输入您的账号</string>
    <string name="password">请输入您的密码</string>
    <string name="ok">确定</string>
    <string name="no">取消</string>
    <string name="login_error">登陆异常！请稍后再试！</string>
    <string name="login_ok">登陆成功^_^</string>
    <string name="login_no">登陆失败-_-\t</string>
    
    <string name="user_service">用户中心</string>
    <string name="create">新建信息</string>
    <string name="user_notices">我发布过的信息</string>
	<string name="logout">退出登陆</string>
	
	<string name="create_notice">创建新信息</string>
	<string name="title_hint">别漏了标题哦亲</string>
	<string name="content_hint">正文&#8230;</string>
	<string name="submit">提交</string>
	
	<string name="waiting">信息正在发送中，请稍后&#8230;</string>
	<string name="not_available">您好，出于一些实际原因，目前在Android客户端上无法发送信息，建议您电脑浏览器发布，或者，您可以向雨无声提出开通这项功能的申请:-)</string>
	<string name="network_down">亲，您的网络不给力啊-.-</string>
	<string name="newer_count">有 %1$d 条更新！</string>
	
	<string name="fetch_interval">自动更新频率</string>
	<string name="about">关于</string>
	<string name="version">版本</string>
	<string name="about_text">这是雨无声官方的校园信息客户端，欢迎广大师生的使用与关注！\n\n开发者：龙凯；制图：陆鹏\n\n有任何建议欢迎联系雨无声或者作者：im.longkai@gmail.com</string>
</resources>
